# pitch

./: .gitignore  Cargo.toml  FLUIDVOICE_ARCHITECTURE.md  FLUIDVOICE_PLAN.md
crates/fluidity-app/: Cargo.toml
crates/fluidity-app/src/: main.rs
crates/fluidity-core/: Cargo.toml
crates/fluidity-core/src/: asr.rs  audio.rs  config.rs  hotkey.rs  lib.rs  llm.rs  pipeline.rs  processing.rs  typing.rs
crates/fluidity-platform/: Cargo.toml
crates/fluidity-platform/src/: lib.rs
crates/fluidity-platform/src/windows/: audio.rs  hotkeys.rs  mod.rs  typing.rs
crates/fluidity-ui/: Cargo.toml
crates/fluidity-ui/src/: lib.rs
