[workspace]
resolver = "2"
members = [
    "crates/fluidity-core",
    "crates/fluidity-platform",
    "crates/fluidity-ui",
    "crates/fluidity-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
directories = "6"
