[package]
name = "fluidity-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tokio.workspace = true
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
directories.workspace = true

whisper-rs = "0.14"
rubato = "0.16"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
